fixed flexwrap issue

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -38,7 +38,7 @@ body {
     color: #e7e7db; 
 }
 
-#label-txt {
+-txt {
     color: #e7e7db; 
 }
 
